--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ mod_name=Ominous Phantoms
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.5
+mod_version=1.0.6
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -37,4 +37,4 @@ mod_group_id=io.github.lycanlucy
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=lycanlucy
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Ties Phantom spawning to Bad Omen instead of Insomnia.
+mod_description=Ties Phantom spawning to Bad Omen rather than Insomnia and gives them new features.
